@@ -2,6 +2,8 @@
 
 	* lib/unix.c (native_isatty): isatty() wrapper
 	(native_kill, native_killpg): kill and killpg wrappers
+	(native_raise): raise wrapper
+	(native_sig): signal name to number conversion
 
 	* src/dfsch.c (dfsch_compare_symbol): symbol-string comparison
 
